# dx-sdk-rs-last-base-one

./: CHANGELOG.md  Cargo.toml  README.md  publish.sh  vm-test-build-copy.sh
contracts/core/price-aggregator/: Cargo.toml
contracts/core/wegld-swap/: Cargo.toml
contracts/core/wegld-swap/interaction/: snippets.sh
contracts/core/wegld-swap/meta/: Cargo.toml
contracts/core/wegld-swap/meta/src/: main.rs
contracts/core/wegld-swap/scenarios/: unwrap_egld.scen.json  wrap_egld.scen.json
contracts/core/wegld-swap/src/: wegld.rs
contracts/core/wegld-swap/tests/: scenario_go_test.rs  wegld_swap_scenario_rs_test.rs
contracts/core/wegld-swap/wasm/: Cargo.toml
contracts/core/wegld-swap/wasm/src/: lib.rs
contracts/examples/digital-cash/: README.md
contracts/examples/multisig/: Cargo.toml
contracts/examples/nft-minter/: readme.md
contracts/examples/nft-subscription/: Cargo.toml
contracts/examples/ping-pong-egld/: Cargo.toml
contracts/feature-tests/abi-tester/: abi_tester_expected_main.abi.json
contracts/feature-tests/use-module/: use_module_expected_main.abi.json
contracts/modules/: Cargo.toml
contracts/modules/src/: dct.rs  default_issue_callbacks.rs  dns.rs  staking.rs
data/codec/: Cargo.toml
data/codec-derive/: Cargo.toml
framework/base/: Cargo.toml
framework/derive/: Cargo.toml
framework/meta/: Cargo.toml
framework/scenario/: Cargo.toml
framework/snippets/: Cargo.toml
framework/wasm-adapter/: Cargo.toml
sdk/core/: Cargo.toml
sdk/scenario-format/: Cargo.toml
vm/: Cargo.toml
vm/src/: vm_err_msg.rs
vm/src/tx_mock/: tx_input.rs  (+3 more)
(+272 files in other folders)
